users wiht tasks: testing api controller
